force-app/main/default/objects/Publish_PriceBook_Entry__c/Publish_PriceBook_Entry__c.object-meta.xml
<CustomObject>
    <description>STRICT CHANGE CONTROL _ NO CHANGES UNLESS APPROVED FOR REPLICATION - Custom object to publish pricebook entry to downstream systems via outbound message</description>
    <label>Publish PriceBook Entry</label>
    <nameField>
        <displayFormat>PPBE-{0000000}</displayFormat>
        <label>Publish PriceBook Entry #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publish PriceBook Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>