force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Formula Field to return the Account Number in which a Program&apos;s Price Book Entry is associated with. Used in outbound messaging. 
Field Type: IA 
Integrated: Y</description>
    <formula>Publish_PriceBook__r.Account_Number__c</formula>
    <inlineHelpText>Formula Field to return the Account Number in which a Program&apos;s Price Book Entry is associated with. Used in outbound messaging.</inlineHelpText>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>