force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount Percent of a Price Book Entry. Used in outbound messaging. 
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Discount Percent of a Price Book Entry. Used in outbound messaging.</inlineHelpText>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>