force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Expiration Date of the Pricebook Entry when Pricebook Entry has been removed from Pricebook</description>
    <inlineHelpText>Expiration Date of the Pricebook Entry when Pricebook Entry has been removed from Pricebook</inlineHelpText>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>