force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Filter_Number__c.field-meta.xml
<CustomField>
    <fullName>Filter_Number__c</fullName>
    <description>Used to identify the originating Filter Criteria for the resulting Product</description>
    <inlineHelpText>Used to identify the originating Filter Criteria for the resulting Product</inlineHelpText>
    <label>Filter Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>