force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Fixed_Price__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked (TRUE) it indicates the price for this product is fixed and will not be impacted by the price update batch job which runs for all Programs where Auto Update Prices = TRUE. Only applies to price book entries created for programs.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>If checked (TRUE) it indicates the price for this product is fixed and will not be impacted by the price update batch job which runs for all Programs where Auto Update Prices = TRUE. Only applies to price book entries created for programs.</inlineHelpText>
    <label>Fixed Price</label>
    <type>Checkbox</type>
</CustomField>