force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Historic_Pricebook_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Historic_Pricebook_Entry_ID__c</fullName>
    <description>Captured the previous PBE Case Safe ID to leverage in the PPBE Pricebook Entry ID</description>
    <inlineHelpText>Captured the previous PBE Case Safe ID to leverage in the PPBE Pricebook Entry ID</inlineHelpText>
    <label>Historic Pricebook Entry ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>