force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/MSRP_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>MSRP_Effective_Date__c</fullName>
    <description>MSRP Effective Date</description>
    <label>MSRP Effective Date</label>
    <type>Date</type>
</CustomField>