force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/MSRP_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>MSRP_Expiration_Date__c</fullName>
    <description>MSRP Expiration Date</description>
    <label>MSRP Expiration Date</label>
    <type>Date</type>
</CustomField>