force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Price Book standard object.  Associates the Publish Pricebook Entry Records with the Price Book record.  Used for outbound messaging.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Lookup to Price Book standard object.  Associates the Publish Pricebook Entry Records with the Price Book record.  Used for outbound messaging.</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Publish PriceBook Entries</relationshipLabel>
    <relationshipName>Publish_PriceBook_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>