force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Price_Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_ID__c</fullName>
    <description>Formula Field to return the Price Book ID from the Price Book standard object.  Used in outbound messaging. 
Field Type: IA 
Integrated: Y</description>
    <formula>Publish_PriceBook__r.Price_Book_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field to return the Price Book ID from the Price Book standard object.  Used in outbound messaging.</inlineHelpText>
    <label>Price Book Number</label>
    <type>Text</type>
</CustomField>