force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Price_Book_Publish_Status__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Publish_Status__c</fullName>
    <description>The outbound message publish status for Publish PriceBook custom object.  Formula Field.
Field Type: IA
Integrated: Y</description>
    <formula>TEXT(Publish_PriceBook__r.Publish_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The outbound message publish status for Publish PriceBook custom object.  Formula Field.</inlineHelpText>
    <label>Price Book Publish Status</label>
    <type>Text</type>
</CustomField>