force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Price_Level__c.field-meta.xml
<CustomField>
    <fullName>Price_Level__c</fullName>
    <description>Identify the Price Level of the related Price Book Entry record. Used for outbound messaging.</description>
    <inlineHelpText>Identify the Price Level of the related Price Book Entry record.</inlineHelpText>
    <label>Price Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>