force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Price_List_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_List_ID__c</fullName>
    <formula>IF (Publish_PriceBook__r.Historic_Pricebook_ID__c != NULL, Publish_PriceBook__r.Historic_Pricebook_ID__c ,  CASESAFEID( Publish_PriceBook__r.Id) )</formula>
    <label>Price Book ID</label>
    <type>Text</type>
</CustomField>