force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Pricebook_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Entry_ID__c</fullName>
    <description>Contains the ID for the PPBE record for downstream systems, includes Historic record ID if present.</description>
    <formula>IF( Historic_Pricebook_Entry_ID__c != NULL,  Historic_Pricebook_Entry_ID__c ,  CASESAFEID(Id))</formula>
    <inlineHelpText>Contains the ID for the PPBE record for downstream systems, includes Historic record ID if present.</inlineHelpText>
    <label>Pricebook_Entry_ID</label>
    <type>Text</type>
</CustomField>