force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Product_RWS_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_RWS_ID__c</fullName>
    <description>Product RWS ID from the Product standard object.  Used in outbound messaging.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Product RWS ID from the Product standard object.  Used in outbound messaging.</inlineHelpText>
    <label>Product RWS ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>