force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <description>Product SKU from the Product standard object.  Used in outbound messaging.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Product SKU from the Product standard object.  Used in outbound messaging.</inlineHelpText>
    <label>Product SKU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>