force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Product_UPC__c.field-meta.xml
<CustomField>
    <fullName>Product_UPC__c</fullName>
    <description>Product UPC from the Product standard object.  Used in outbound messaging.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Product UPC from the Product standard object.  Used in outbound messaging.</inlineHelpText>
    <label>Product UPC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>