force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Program_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_Safe_ID__c</fullName>
    <description>Program 18 character unique system assigned Id related to PBE and related PPBE</description>
    <formula>Publish_PriceBook__r.Program__r.Program_Safe_ID__c</formula>
    <inlineHelpText>Program 18 character unique system assigned Id related to PBE and related PPBE</inlineHelpText>
    <label>Program Safe ID</label>
    <type>Text</type>
</CustomField>