force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Program_Sales_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Sales_Contract_Name__c</fullName>
    <description>Program Sales Contract Name</description>
    <formula>Publish_PriceBook__r.Program__r.Sales_Contract_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Program Sales Contract Name</inlineHelpText>
    <label>Program Sales Contract Name</label>
    <type>Text</type>
</CustomField>