force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>References the related Program Type for Outbound Messaging</description>
    <formula>TEXT( Publish_PriceBook__r.Program__r.Type__c )</formula>
    <inlineHelpText>References the related Program Type for Outbound Messaging</inlineHelpText>
    <label>Program Type</label>
    <type>Text</type>
</CustomField>