force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Publish_PriceBook__c.field-meta.xml
<CustomField>
    <fullName>Publish_PriceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Publish PriceBook</description>
    <inlineHelpText>Publish PriceBook</inlineHelpText>
    <label>Publish PriceBook</label>
    <referenceTo>Publish_PriceBook__c</referenceTo>
    <relationshipLabel>Publish PriceBook Entries</relationshipLabel>
    <relationshipName>Publish_PriceBook</relationshipName>
    <type>Lookup</type>
</CustomField>