force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Publish_Status__c.field-meta.xml
<CustomField>
    <fullName>Publish_Status__c</fullName>
    <description>Status of the Outbound Message.  Updated by workflow field update when outbound message is triggered.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Status of the Outbound Message.  Updated by workflow field update when outbound message is triggered.</inlineHelpText>
    <label>Publish Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ReadyToPublish</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>