force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Date__c</fullName>
    <description>Outbound Message Published Date
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Outbound Message Published Date</inlineHelpText>
    <label>Published Date</label>
    <type>DateTime</type>
</CustomField>