force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Style_Name__c.field-meta.xml
<CustomField>
    <fullName>Style_Name__c</fullName>
    <description>Style Name</description>
    <label>Style Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>