force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Style_Number__c.field-meta.xml
<CustomField>
    <fullName>Style_Number__c</fullName>
    <description>Style Number (field is used to match against Product standard object). Used for outbound messaging. 
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Style Number (field is used to match against Product standard object). Used for outbound messaging.</inlineHelpText>
    <label>Style Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>