force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/Style_Number_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Style_Number_Unique_Id__c</fullName>
    <description>Style Number Unique Identifier (field is used to match against Product Style custom object and Product standard object).  Used for outbound messaging.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Style Number Unique Identifier (field is used to match against Product Style custom object and Product standard object).  Used for outbound messaging.</inlineHelpText>
    <label>Style Number Unique Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>