force-app/main/default/objects/Publish_PriceBook_Entry__c/fields/System_Record_Identity__c.field-meta.xml
<CustomField>
    <fullName>System_Record_Identity__c</fullName>
    <description>For use by Salesforce Replication process - DB AMP has access</description>
    <inlineHelpText>For use by Salesforce Replication process - DB AMP has access</inlineHelpText>
    <label>System Record Identity</label>
    <type>AutoNumber</type>
</CustomField>